src/objects/Product__c.object
<CustomObject>
    <fields>
        <fullName>Ad_Height__c</fullName>
        <label>Ad Height</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ad_Width__c</fullName>
        <label>Ad Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Color_Type__c</fullName>
        <label>Color Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Premium_Print_Position__c</fullName>
        <label>Premium Print Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price (excl. VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_MSL_Id__c</fullName>
        <externalId>true</externalId>
        <label>Product MSL Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <label>Publication</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quote Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscription_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription_Price__c</fullName>
        <label>Subscription Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <label>Subscription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vacancy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vacancy</label>
        <referenceTo>Vacancy__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>